--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,18 @@ code {
 }
 
 #root {
-  padding: 50px;
   display: flex;
+  min-height: 100vh;
 
-  flex-wrap: nowrap;
   flex-direction: column;
+  gap: 20px;
+}
+
+#root > :nth-child(2) {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
 }
